--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,34 +1,51 @@
+/* apenas header o código não fazia nada, header imgg acessa a tag que você queria estilizar */
 header {
     width: 100%;
-    padding: 20px;
+    display: flex;
+    padding: clamp(25px, 3vw, 100px) 0;
+}
+header img {
+    width: clamp(200px, 30vw, 450px);
 }
 
+.group {
+    max-width: 1440px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    gap: 50px;
+}
 .container {
+    height: 50vh; 
     display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: center;
 }
 
-.container .mockups {
-    width: 45%;
-    margin-left: 50px;
+.container .mockup {
+    width: clamp(350px, 40vw, 1350px);
+    height: auto;
 }
 
 .container .content-container {
-    width: 40%;
+    width: 45%;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    margin: 0 50px 100px 50px;
-    gap: 30px;
+    padding: 50px;
+    gap: 25px;
     text-align: left;
 }
 
 .container .content-container .title {
-    font-size: 2.8rem;
+    font-size: clamp(1rem, 3vw, 3rem);
 }
 
 .container .description {
-    font-size: 1.1rem;
+    font-size: clamp(0.6rem, 2vw, 1.2rem);
     font-weight: 400;
 }
 
@@ -78,87 +95,40 @@ footer i {
     padding-top: 12px;
 }
 
-@media screen and (max-width: 1210px) {
-    .logo {
-        width: 200px;
+@media screen and (max-width: 1024px) {
+    .group {
+        gap: 0;
+        margin: 20px;
     }
-
-    .container .content-container .title {
-        font-size: 2.3rem;
-    }
-}
-
-@media screen and (max-width: 1050px) {
-    .container .content-container {
-        margin: 0 50px 50px 50px;
-    }
-
-    .container .content-container .title {
-        font-size: 2rem;
-    }
-
-    .container .description {
-        font-size: 1rem;
-        font-weight: 400;
-    }
-
-    footer {
-        justify-content: center;
-        align-items: center;
-        padding: 0 2rem 0 0;
-    }
-
-    footer .icon-container {
-        margin-top: 5rem;
-    }
-}
-
-@media screen and (max-width: 900px) {
-    .container .content-container .title {
-        font-size: 1.7rem;
-    }
-
-    .container .description {
-        font-size: 1rem;
-        font-weight: 300;
-    }
-}
-
-@media screen and (max-width: 815px) {
-    body {
-        background-image: url(../images/bg-mobile.svg);
-        background-size: 100% auto;
-        background-repeat: no-repeat;
-        height: 100vh;
-        width: 100vw;
-    }
-
-    .logo {
-        width: 170px;
-    }
-
     .container {
-        justify-content: center;
         flex-direction: column;
+        height: auto;
+        transform: translateX(0);
     }
 
     .container .content-container {
         width: 80%;
-        margin: 0 auto 50px auto;
+        margin: 0 auto ;
         text-align: center;
         justify-content: center;
         align-items: center;
     }
 
-    .container .mockups {
+    .container .mockup {
         margin-top: 50px;
     }
-    footer {
-        padding: 0;
-    }
 
-    footer .icon-container {
-        margin-top: 0;
-        margin-bottom: 2rem;
+    footer {
+        justify-content: center;
+        padding: 50px 0;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+}
+
+@media screen and (min-width: 1920px) {
+    header {
+        padding: 50px 0;
     }
 }
